--- a/frontend21/amp-dev.ejs
+++ b/frontend21/amp-dev.ejs
@@ -2,7 +2,7 @@
 [% supportedFormats formats={{ doc.formats|tojson }} %]
 {% endif %}
 
-{% macro filter(formats='websites, ads, stories, email, nation-usa', level='advanced, beginner') -%}
+{% macro filter(formats='websites, ads, stories, email', level='advanced, beginner') -%}
 {% if not formats.strip() and not level.strip() %}
 {{ caller() }}
 {% else %}
