--- a/frontend21/scss/mixins.scss
+++ b/frontend21/scss/mixins.scss
@@ -171,6 +171,13 @@
   }
 }
 
+@mixin ci-nation-usa {
+  color: color('white');
+  svg {
+    fill: currentColor;
+  }
+}
+
 @mixin scrollbar {
   &::-webkit-scrollbar {
     width: 6px;
