--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -202,6 +202,11 @@
             .ontomatica & {
               fill: url('#gradient-ontomatica') color('black');
             }
+
+            .nation-usa & {
+              fill: color('black');
+            }
+
           }
         }
 
@@ -264,7 +269,6 @@
             #{$header}-flyout-item-title {
               color: color('white');
             }
-
             svg {
               fill: color('white');
             }
@@ -281,7 +285,6 @@
             #{$header}-flyout-item-title {
               color: color('charade');
             }
-
             svg {
               fill: color('charade');
             }
@@ -298,7 +301,6 @@
             #{$header}-flyout-item-title {
               color: color('charade');
             }
-
             svg {
               fill: color('charade');
             }
@@ -307,6 +309,7 @@
           &.ontomatica {
             @include gradient-ontomatica;
           }
+
         }
       }
     }
