switched to nation-usa stand alone

--- a/frontend/scss/components/organisms/header.scss
+++ b/frontend/scss/components/organisms/header.scss
@@ -258,6 +258,11 @@
         &.email {
           @include gradient-e-mails;
         }
+
+        &.ontomatica {
+          @include gradient-ontomatica;
+        }
+
       }
 
       &-link {
