restored amp-nation-usa

--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -202,6 +202,10 @@
             .ontomatica & {
               fill: url('#gradient-ontomatica') color('black');
             }
+
+            .nation-usa & {
+              fill: color('black');
+            }
           }
         }
 
