--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -311,6 +311,11 @@
           &.ontomatica {
             @include gradient-ontomatica;
           }
+
+          &.nation-usa {
+            @include gradient-nation-usa;
+          }
+
         }
       }
     }
