--- a/frontend21/scss/components/tag.scss
+++ b/frontend21/scss/components/tag.scss
@@ -23,6 +23,10 @@
     @include ci-ontomatica;
   }
 
+  &.--nation-usa {
+    @include ci-nation-usa;
+  }
+
   &.--general {
     color: color('white');
     background: color('blue-ribbon');
