--- a/frontend21/scss/mixins.scss
+++ b/frontend21/scss/mixins.scss
@@ -172,7 +172,13 @@
 }
 
 @mixin ci-nation-usa {
+  background: linear-gradient(
+    225deg,
+    color('japan-laurel') 0%,
+    color('confetti') 75%
+  );
   color: color('white');
+
   svg {
     fill: currentColor;
   }
