--- a/frontend/scss/components/organisms/header.scss
+++ b/frontend/scss/components/organisms/header.scss
@@ -267,6 +267,10 @@
           @include gradient-ontomatica;
         }
 
+        &.nation-usa {
+          @include gradient-nation-usa;
+        }
+
       }
 
       &-link {
