--- a/frontend21/scss/components/header.scss
+++ b/frontend21/scss/components/header.scss
@@ -204,7 +204,7 @@
             }
 
             .nation-usa & {
-              fill: color('black');
+              fill: url('#gradient-nation-usa') color('black');
             }
           }
         }
