--- a/frontend21/scss/components/format-toggle.scss
+++ b/frontend21/scss/components/format-toggle.scss
@@ -94,9 +94,8 @@
 
   &-link:hover,
   &-selected {
-    &.--ontomatica {
-      @include ci-ontomatica;
+    &.--nation-usa {
+      @include ci-nation-usa;
     }
   }
-
 }
