--- a/frontend/templates/views/partials/format-toggle.j2
+++ b/frontend/templates/views/partials/format-toggle.j2
@@ -3,7 +3,7 @@
 
 {# Courses are not format togglable #}
 {% if not '/courses/' in doc.pod_path %}
-{% set formats = ['websites', 'stories', 'ads', 'email', 'nation-usa'] %}
+{% set formats = ['websites', 'stories', 'ads', 'email'] %}
 
 <div class="ap-m-format-toggle">
   {# Use websites as default to have an element to dynamically set #}
