restored format-toggle.j2; unwound format-toggle.scss and tag.scss

--- a/frontend/scss/components/molecules/format-toggle.scss
+++ b/frontend/scss/components/molecules/format-toggle.scss
@@ -104,9 +104,9 @@
     }
   }
 
-  &-link-nation-usa {
+  &-link-ontomatica {
     &:hover, &.#{molecule('format-toggle')}-selected {
-      @include gradient-nation-usa; color: color('white');
+      @include gradient-ontomatica; color: color('white');
       .#{atom('ico')} { fill: color('white'); }
     }
   }
