--- a/frontend21/scss/components/format-toggle.scss
+++ b/frontend21/scss/components/format-toggle.scss
@@ -94,6 +94,13 @@
 
   &-link:hover,
   &-selected {
+    &.--ontomatica {
+      @include ci-ontomatica;
+    }
+  }
+
+  &-link:hover,
+  &-selected {
     &.--nation-usa {
       @include ci-nation-usa;
     }
