updated _color; added nation-usa to format-toggle-2021

--- a/frontend/scss/components/atoms/_color.scss
+++ b/frontend/scss/components/atoms/_color.scss
@@ -29,6 +29,7 @@ It has multiple size modifiers (more could be added below).
 @mixin color-e-mails { color: color('charade'); }
 @mixin color-overview { color: color('charade'); }
 @mixin color-ontomatica { color: color('white'); }
+@mixin color-nation-usa { color: color('white'); }
 
 @mixin fill-websites { fill: color('white'); }
 @mixin fill-stories { fill: color('charade'); }
@@ -36,6 +37,7 @@ It has multiple size modifiers (more could be added below).
 @mixin fill-e-mails { fill: color('charade'); }
 @mixin fill-overview { fill: color('charade'); }
 @mixin fill-ontomatica { fill: color('white'); }
+@mixin fill-nation-usa { fill: color('white'); }
 
 @mixin gradient-dark { background: linear-gradient(45deg, color('river-bed'), color('charade')); }
 @mixin gradient-websites { background: linear-gradient(225deg, color('robins-egg') 0%, color('blue-ribbon') 75%); }
@@ -43,3 +45,4 @@ It has multiple size modifiers (more could be added below).
 @mixin gradient-ads { background: linear-gradient(225deg, color('lav-magenta') 0%, color('electric-violet') 75%); }
 @mixin gradient-e-mails { background: linear-gradient(225deg, color('japan-laurel') 0%, color('confetti') 75%); }
 @mixin gradient-ontomatica { background: linear-gradient(142deg, color('peach-orange') 0%, color('guardsman-red') 75%); }
+@mixin gradient-nation-usa { background: linear-gradient(225deg, color('japan-laurel') 0%, color('confetti') 75%); }
