--- a/frontend21/scss/components/format-toggle.scss
+++ b/frontend21/scss/components/format-toggle.scss
@@ -105,4 +105,11 @@
       @include ci-nation-usa;
     }
   }
+
+  &-link:hover,
+  &-selected {
+    &.--nation-usa {
+      @include ci-nation-usa;
+    }
+  }
 }
