backed out addition

--- a/frontend/scss/components/molecules/language-selector.scss
+++ b/frontend/scss/components/molecules/language-selector.scss
@@ -41,7 +41,7 @@
     }
   }
 
-/* addition */
+/* addition
   select {
     height: 100%;
     padding: 0 15px 0 5px;
@@ -63,6 +63,7 @@
     background-position: center;
     pointer-events: none;
   }
+*/
 
   &-toggle {
     position: absolute;
