--- a/frontend/scss/components/molecules/language-selector.scss
+++ b/frontend/scss/components/molecules/language-selector.scss
@@ -11,7 +11,7 @@
 @import '_mixins.scss';
 @import '_variables.scss';
 
-/* @import 'components/atoms/_text.scss'; */
+@import 'components/atoms/_text.scss';
 
 .#{molecule('language-selector')} {
   position: relative;
@@ -32,8 +32,7 @@
   &-label {
     display: flex;
     align-items: center;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 11px;
     border: none;
     background: none;
 
@@ -89,6 +88,8 @@
   }
 
   &-list {
+    font-size: 16px;
+    font-weight: bold;
     list-style: none;
     display: none;
     position: absolute;
@@ -96,7 +97,7 @@
     margin: 0;
     padding: 2px 8px;
     background: color('white');
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.07);
+    /* box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.07); */
 
     @media (max-width: $minDeviceWidth) {
       overflow: auto;
