--- a/frontend/templates/views/partials/header.j2
+++ b/frontend/templates/views/partials/header.j2
@@ -96,13 +96,6 @@
     {{ doc.pod.amp_dev.template_cache.get(cache_key)|safe }}
     {% endif %}
 
-<!-- moved before search -->
-    {# blog.amp.dev shares the header with amp.dev but isn't localized.
-       Therefore it's nice to have a way to turn off the language selector #}
-    {% if language_selector != False %}
-    {% include '/views/partials/language-selector.j2' %}
-    {% endif %}
-
     {% do doc.styles.addCssFile('/css/components/molecules/search-trigger.css') %}
     {% do doc.icons.useIcon('/icons/magnifier.svg') %}
     <div id="searchTriggerOpen" class="ap-m-search-trigger" on="tap:searchLightbox" role="button" aria-label="{{ _('Search') }}"  tabindex="0">
@@ -110,7 +103,7 @@
         <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#magnifier"></use></svg>
       </div>
     </div>
-<!--
+
     {# blog.amp.dev shares the header with amp.dev but isn't localized.
        Therefore it's nice to have a way to turn off the language selector #}
     {% if language_selector != False %}
@@ -126,12 +119,11 @@
       <div class="ap-m-language-selector-list" role="list">
         {% for locale in doc.locales if not locale == doc.locale  %}
         {% set localized_doc = doc.localize(locale) %}
-        <a class="ap-m-nav-link" href="{{ localized_doc.url.path }}" role="listitem">{{ locale.get_language_name()|capitalize }}</a>
+        <a class="ap-m-nav-link" href="{{ localized_doc.url.path }}" role="listitem">{{ locale.language|upper }}</a>
         {% endfor %}
       </div>
     </div>
     {% endif %}
--->
 
   </div>
 </header>
