moved language before search; changed margin-right to 0

--- a/frontend/scss/components/molecules/language-selector.scss
+++ b/frontend/scss/components/molecules/language-selector.scss
@@ -15,7 +15,8 @@
 
 .#{molecule('language-selector')} {
   position: relative;
-  margin-right: 20px;
+  /* margin-right: 20px; */
+  margin-right: 0px;
   padding-bottom: 10px;
   display: none;
 
