--- a/frontend21/scss/mixins.scss
+++ b/frontend21/scss/mixins.scss
@@ -164,7 +164,7 @@
     color('japan-laurel') 0%,
     color('confetti') 75%
   );
-  color: color('white');
+  color: color('charade');
 
   svg {
     fill: currentColor;
@@ -177,7 +177,7 @@
     color('japan-laurel') 0%,
     color('confetti') 75%
   );
-  color: color('white');
+  color: color('charade');
 
   svg {
     fill: currentColor;
