--- a/frontend/scss/components/atoms/_color.scss
+++ b/frontend/scss/components/atoms/_color.scss
@@ -29,7 +29,7 @@ It has multiple size modifiers (more could be added below).
 @mixin color-e-mails { color: color('charade'); }
 @mixin color-overview { color: color('charade'); }
 @mixin color-ontomatica { color: color('white'); }
-@mixin color-nation-usa { color: color('white'); }
+@mixin color-nation-usa { color: color('charade'); }
 
 @mixin fill-websites { fill: color('white'); }
 @mixin fill-stories { fill: color('charade'); }
@@ -37,7 +37,7 @@ It has multiple size modifiers (more could be added below).
 @mixin fill-e-mails { fill: color('charade'); }
 @mixin fill-overview { fill: color('charade'); }
 @mixin fill-ontomatica { fill: color('white'); }
-@mixin fill-nation-usa { fill: color('white'); }
+@mixin fill-nation-usa { fill: color('charade'); }
 
 @mixin gradient-dark { background: linear-gradient(45deg, color('river-bed'), color('charade')); }
 @mixin gradient-websites { background: linear-gradient(225deg, color('robins-egg') 0%, color('blue-ribbon') 75%); }
