added icon to success-story-detail

--- a/frontend/templates/views/detail/success-story-detail.j2
+++ b/frontend/templates/views/detail/success-story-detail.j2
@@ -102,6 +102,10 @@
           {% for kpi in doc.kpis %}
             <div class="ap-m-kpi ap-m-kpi-websites">
               <div class="ap-m-kpi-content">
+                {# addition #}
+                {% if kpi.icon %}
+                  <span class="ap-m-kpi-icon">{{kpi.icon|safe}}</span>
+                {% endif %}
                 {% if kpi.value %}
                   <span class="ap-m-kpi-number">{{kpi.value|safe}}</span>
                 {% endif %}
