--- a/frontend/templates/views/detail/success-story-detail.j2
+++ b/frontend/templates/views/detail/success-story-detail.j2
@@ -104,7 +104,7 @@
               <div class="ap-m-kpi-content">
                 {# addition #}
                 {% if kpi.icon %}
-                  <span class="ap-m-kpi-icon">{{kpi.icon|safe}}</span>
+                  <span class="ap-m-kpi-icon">{{kpi.icon}}</span>
                 {% endif %}
                 {% if kpi.value %}
                   <span class="ap-m-kpi-number">{{kpi.value|safe}}</span>
