reduce margin-bottom 2021 section.scss

--- a/frontend21/scss/components/section.scss
+++ b/frontend21/scss/components/section.scss
@@ -20,10 +20,12 @@
   }
 
   &:last-child {
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
+    margin-bottom: 50px;
 
     @include respond-to('large') {
-      margin-bottom: 150px;
+      /* margin-bottom: 150px; */
+      margin-bottom: 50px;
     }
   }
 
