--- a/frontend21/scss/components/section.scss
+++ b/frontend21/scss/components/section.scss
@@ -1,14 +1,17 @@
 .#{prefix(null, 'section')} {
   grid-column: 2 / 22;
   width: 100%;
-  margin-top: 120px;
+  /* margin-top: 120px; */
+  margin-top: 20px;
 
   @include respond-to('small') {
-    margin-top: 160px;
+    /* margin-top: 160px; */
+    margin-top: 60px;
   }
 
   @include respond-to('medium') {
-    margin-top: 200px;
+    /* margin-top: 200px; */
+    margin-top: 60px;
   }
 
   &:first-child {
