--- a/frontend/scss/components/molecules/language-selector.scss
+++ b/frontend/scss/components/molecules/language-selector.scss
@@ -15,86 +15,41 @@
 
 .#{molecule('language-selector')} {
   position: relative;
-  margin-right: 20px;
-  padding-bottom: 10px;
   display: none;
+  height: 100%;
 
-  @media (max-width: $minDeviceWidth) {
+  @media (min-width: $minDeviceWidth) {
     margin-right: 0;
   }
 
-  @media (min-width: 1024px) {
-    margin-right: 0;
-    padding-right: 30px;
-    display: block;
-  }
-
-  &-label {
-    display: flex;
-    align-items: center;
-    font-size: 11px;
-    border: none;
-    background: none;
-
-    &:hover {
-      color: color('blue-ribbon');
-    }
-  }
-
-  &-toggle {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    -webkit-appearance: none;
-
-    @media (min-width: 1024px) {
-      width: calc(100% - 30px);
-    }
-  }
-
-  &-icon {
-    width: 10px;
-    height: 10px;
-    margin-left: 5px;
-  }
-
-  &-list {
-    list-style: none;
+  @media (max-width: 1023px) {
     display: none;
+  }
+
+  &:after {
+    content: '';
     position: absolute;
-    /* right: 15%; */
-    margin: 0;
-    padding: 2px 8px;
+    top: calc(50% - 4px);
+    right: 5px;
+    width: 8px;
+    height: 8px;
     background: color('white');
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.07);
-
-    @media (max-width: $minDeviceWidth) {
-      overflow: auto;
-      max-height: calc(100vh - #{$mobileHeaderHeight} - #{$bannerHeight});
-    }
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64' fill='%2320202A'%3E%3Cpath d='M59.863 17.14l4.137 5.488-32 24.232-32-24.232 4.137-5.488 27.863 21.108z'%3E%3C/path%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
+    pointer-events: none;
   }
 
-    .ap-m-nav-link {
-      display: block;
-    }
-
-  /* For when the selector is active */
-  &-toggle:hover ~ &-list,
-  &-toggle:checked ~ &-list,
-  &-list:hover {
-      display: block;
+  select {
+    height: 100%;
+    padding: 0 15px 0 5px;
+    font-family: $fontFamilyHeadline;
+    font-size: 16px;
+    font-weight: bold;
   }
 
-  &-list:focus-within {
-      display: block;
-  }
-
-  .mainmenuopen & {
-    display: block;
+  .--mainmenuopen & {
+    display: flex;
   }
 }
+
