--- a/frontend/templates/views/partials/format-toggle.j2
+++ b/frontend/templates/views/partials/format-toggle.j2
@@ -2,10 +2,14 @@
 {% do doc.styles.addCssFile('css/components/molecules/format-toggle.css') %}
 
 {# Courses are not format togglable #}
-{% if not '/courses/' in doc.pod_path %}
-{% set formats = ['websites', 'stories', 'ads', 'email', 'nation-usa'] %}
-
 {# Tutorials are not format togglable #}
+{% if not '/courses/' in doc.pod_path %}
+  {% set formats = ['websites', 'stories', 'ads', 'email', 'nation-usa'] %}
+{% elif not '/tutorial/' in doc.pod_path %}
+  {% set formats = ['websites', 'stories', 'ads', 'email'] %}
+{% endif %}
+
+
 {% if not '/tutorial/' in doc.pod_path %}
 {% set formats = ['websites', 'stories', 'ads', 'email'] %}
 
