--- a/frontend/templates/views/partials/format-toggle.j2
+++ b/frontend/templates/views/partials/format-toggle.j2
@@ -1,13 +1,9 @@
 {% do doc.styles.addCssFile('css/components/atoms/format-backgrounds.css') %}
 {% do doc.styles.addCssFile('css/components/molecules/format-toggle.css') %}
 
-{# Courses, Tutorials are not format togglable #}
+{# Courses are not format togglable #}
 {% if not '/courses/' in doc.pod_path %}
-  {% set formats = ['websites', 'stories', 'ads', 'email', 'nation-usa'] %}
-{% elif not '/tutorial/' in doc.pod_path %}
-  {% set formats = ['websites', 'stories', 'ads', 'email', 'nation-usa'] %}
-{% endif %}
-
+{% set formats = ['websites', 'stories', 'ads', 'email'] %}
 
 <div class="ap-m-format-toggle">
   {# Use websites as default to have an element to dynamically set #}
