--- a/frontend/templates/views/partials/format-toggle.j2
+++ b/frontend/templates/views/partials/format-toggle.j2
@@ -3,9 +3,8 @@
 
 {# Courses are not format togglable #}
 {# {% if not '/courses/' in doc.pod_path %} #}
-{% if not '/courses/' or not '/tutorial-p/' in doc.pod_path %}
+{% if not '/courses/' in doc.pod_path and not '/tutorial-p/' in doc.pod_path %}
 {% set formats = ['websites', 'stories', 'ads', 'email', 'nation-usa'] %}
-
 
 <div class="ap-m-format-toggle">
   {# Use websites as default to have an element to dynamically set #}
