--- a/frontend/templates/views/partials/footer.j2
+++ b/frontend/templates/views/partials/footer.j2
@@ -3,7 +3,9 @@
 <footer class="ap--footer">
   <div class="ap-o-footer">
     <div class="ap-o-footer-line-top">
-      <div class="ap-o-footer-hint">{{ _('accordion footer goes here') }}</div>
+      {% with sections = doc.faq.overview %}
+      {% include 'views/partials/accordion.j2' %}
+      {% endwith %}
     </div>
   </div>
 
